--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
   box-sizing: border-box;
 }
+
 *,
 ::after,
 ::before {
@@ -35,4 +36,22 @@ Potom zkuste třeba tři nebo čtyři sloupce.
 Pro každou variantu si pomocí devtools udělejte screenshot.
 */
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.galerie {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.foto {
+  width: 25%;
+  /*rozdělí na čtyři sloupce*/
+  /*
+  width: 33.3%  rozdělí na tři sloupce
+  width: 50%    rozdělí na dva sloupce
+  */
+}
